--- a/client/package.json
+++ b/client/package.json
@@ -10,12 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@mui/styles": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
+    "react-bootstrap": "^2.10.2",
+    "react-bootstrap-v5": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.0.1",
@@ -24,6 +34,7 @@
     "react-router-dom": "^6.22.3",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
+    "styled-components": "^6.1.8",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
