--- a/server/config/config.env
+++ b/server/config/config.env
@@ -13,3 +13,9 @@ SMPT_PORT = 465
 SMPT_SERVICE = gmail
 SMPT_MAIL = rk9315185727@gmail.com
 SMPT_PASSWORD = laqzhsqorhryjmhu
+
+CLOUDINARY_NAME = dztdvwi3m
+CLOUDINARY_API_KEY = 925772364851576
+CLOUDINARY_API_SECRET = JGnFCI-E4ZqQd7ZQsiqf40JpK2w
+
+FRONTEND_URL = 
