Implement Change,Forgot and Reset Password Feature

--- a/server/config/config.env
+++ b/server/config/config.env
@@ -18,4 +18,4 @@ CLOUDINARY_NAME = dztdvwi3m
 CLOUDINARY_API_KEY = 925772364851576
 CLOUDINARY_API_SECRET = JGnFCI-E4ZqQd7ZQsiqf40JpK2w
 
-FRONTEND_URL = 
+FRONTEND_URL = http://localhost:5173
