--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server/server.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod": "node server.js",
     "start": "node server/server.js",
-    "dev": "nodemon server/server.js"
+    "build": "NPM_CONFIG_PRODUCTION=false && npm install && npm config set legacy-peer-deps true --prefix client && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +26,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.3",
     "nodemailer": "^6.9.13",
+    "path": "^0.12.7",
     "stripe": "^15.8.0",
     "validator": "^13.11.0"
   }
