--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "prod": "node server.js",
-    "start": "node server/server.js",
+    "start": "node server.js",
     "build": "NPM_CONFIG_PRODUCTION=false && npm install && npm config set legacy-peer-deps true --prefix client && npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
