--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "country-state-city": "^3.2.1",
     "overlay-navbar": "^1.2.3",
     "react": "^18.2.0",
     "react-alert": "^7.0.3",
