--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "prod": "node server.js",
     "start": "node server.js",
-    "build": "NPM_CONFIG_PRODUCTION=false && npm install && npm config set legacy-peer-deps true --prefix client && npm install --prefix client && npm run build --prefix client"
+    "build": "NPM_CONFIG_PRODUCTION=false && npm install && npm config set legacy-peer-deps true --prefix client && npm install --prefix client && npm run build --prefix client",
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
